2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/aboutdialog.glade (label_debian_*): Remove.  The Debian
	package of regexxer is not the only one out there, and I cannot
	list all of them in the about dialog.  Sorry Ross :/
	(label_translator_{what,who}): Give credit to the translator(s)
	for the user's locale as listed in the translation of the string
	"translator-credits".
	(label_url): Get rid of the custom SelectableLabel widget class.
	The only feature provided by the custom widget was tab-navigation
	to labels -- I figured one can simply use C-Tab to do just that.
	(label_author_who): ditto
	(label_translator_who): ditto.

	* src/aboutdialog.cc (SelectableLabel): Remove custom widget.
	(AboutDialog::create): Acommodate to glade file modifications.

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): No need to explicitely specify
	$(top_srcdir)/ in the directory name because the aclocal rule
	changes to that directory anyway.  This also avoids confusing
	recent releases of gettextize.

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (CONFIG_STATUS_DEPENDENCIES): AC_SUBST() this
	variable with '$(top_srcdir)/po/LINGUAS' for utmost perfection ;-)

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (toolbar): Make glade-2 replace its old-style
	magic "class names" with proper GtkToolItem and derivated elements.
	Note that you'll need to apply the patch for #142761 in order to
	make changing the toolbar style at runtime work.
	(combo_pattern): Replace deprecated GtkCombo with GtkComboBoxEntry.

	* src/controller.cc (ControlItem::add_widgets): Allow for both
	Gtk::ToolButton and Gtk::Button widgets, and detect at runtime
	which type to use.

	* src/mainwindow.cc (MainWindow::load_xml): Due to #142755, we
	currently have to use get_child() on combo_pattern to gain access
	to the entry widget.  Also, a hack was necessary to attach the