@@ -26,13 +26,15 @@
 #include <gtkmm/image.h>
 #include <gtkmm/label.h>
 #include <libglademm.h>
-#include <memory>
 
 #include <config.h>
 
 
 namespace
 {
+
+const char *const package_title = "<span size=\"xx-large\" weight=\"heavy\">"
+                                  PACKAGE_STRING "</span>";
 
 void apply_label_markup(Gtk::Label& label)
 {
@@ -45,7 +47,7 @@ void apply_label_markup(Gtk::Label& label)
 namespace Regexxer
 {
 
-Gtk::Dialog* AboutDialog::create(Gtk::Window& parent)
+std::auto_ptr<Gtk::Dialog> AboutDialog::create(Gtk::Window& parent)
 {
   using Gnome::Glade::Xml;
 
@@ -53,20 +55,19 @@ Gtk::Dialog* AboutDialog::create(Gtk::Window& parent)
 
   Gtk::Dialog* aboutdialog = 0;
   std::auto_ptr<Gtk::Dialog> dialog (xml->get_widget("aboutdialog", aboutdialog));
+
   dialog->set_transient_for(parent);
+  dialog->signal_response().connect(sigc::hide(sigc::mem_fun(*dialog, &Gtk::Widget::hide)));
 
   Gtk::Image* image = 0;
   xml->get_widget("image", image)->set(application_icon_filename);
 
   Gtk::Label* label = 0;
-  xml->get_widget("label_title", label)->set_markup(
-      "<span size=\"xx-large\" weight=\"heavy\">" PACKAGE_STRING "</span>");
+  xml->get_widget("label_title", label)->set_markup(package_title);
   apply_label_markup(*xml->get_widget("label_author_what", label));
   apply_label_markup(*xml->get_widget("label_translator_what", label));
 
-  dialog->signal_response().connect(sigc::hide(sigc::mem_fun(*dialog, &Gtk::Widget::hide)));
-
-  return dialog.release();
+  return dialog;
 }
 
 } // namespace Regexxer
